--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     <meta property="og:title" content="SASTRA Aeromodelling Club | Design. Build. Fly." />
     <meta property="og:description" content="Join SASTRA's premier aerospace innovation club. Design, build, and fly RC aircraft, drones, and UAVs." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@SASTRAAeroClub" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@SASTRAAeroClub" /><meta name="twitter:title" content="SASTRA Aeromodelling Club | Design. Build. Fly." /> <meta name="twitter:description" content="Join SASTRA's premier aerospace innovation club. Design, build, and fly RC aircraft, drones, and UAVs." /> <link rel="icon" href="/favicon.ico" />
   </head>
 
   <body>
